# ecommerce-API

./: .env.local  .gitignore  .run.sh  Docker -compose.yml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
App/Backend/: database.py  models.py  schemas.py
Backend/: api.py
alembic/: env.py
alembic/versions/: 048e8994c778_create_users_table.py  0b27a1772062_create_users_table.py  0ffee7416391_create_desktops_table.py  244f1c189473_create_laptops_table.py  415fa9968816_create_categories_table.py  64cd18d6ff9a_create_users_table.py  8c01559585bd_create_items_table.py  b42a10a11531_create_categories_table.py  d6c69c1bd028_create_datastorage_table.py  fee13c022ffb_create_computing_table.py
app/: __init__.py  config.py  create_db.py  crud.py  database.py  main.py  models.py  schemas.py
app/Categories/: categories.py  crud.py  models.py  schemas.py
app/Computing/: Computing.py  crud.py  models.py  schemas.py
app/Datastorage/: Datastorage.py  crud.py
app/Desktops/: Desktops.py  crud.py
app/Laptops/: Laptops.py  crud.py
app/Users/: crud.py  hashing.py  models.py  router.py  schemas.py  test_users.py  user.py
app/auth/: auth.py  schemas.py  services.py
app/core/: config.py
app/dependecies/: dependecies.py
app/order/: crud.py
app/router/api_v1/: Categories.py  Computing.py  Items.py  Users.py  auth.py  computing.py
tests/: conf_test_db.py  conftest.py
tests/Users/: test_users.py
